<resources>
    <string name="app_name">GaleriaDeSwann</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gestión de Inventario</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Añadir Obra</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="consultar_por_id">Consultar por ID</string>
    <string name="consultar_todos">Consultar Todos</string>
    <string name="a_adir_art_culo">Añadir Artículo</string>
    <string name="gestionar_negocio">Gestionar Negocio</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar_por_id">Eliminar por ID</string>
    <string name="registrar_obra_de_arte">Registrar Obra de Arte</string>
    <string name="nombre_de_la_obra_antig_edad">Nombre de la obra/antigüedad</string>
    <string name="precio">Precio (€)</string>
    <string name="unidades_en_stock">Unidades en stock</string>
    <string name="a_adir_a_la_colecci_n">Añadir a la Colección</string>
    <string name="acciones_de_la_obra">Acciones de la Obra</string>
    <string name="compartir">Compartir</string>
    <string name="modificar_detalles">Modificar Detalles</string>
    <string name="editar_obra">Editar Obra</string>
    <string name="nombre">Nombre</string>
    <string name="unidades">Unidades</string>
    <string name="retirar_obra_de_la_colecci_n">Retirar Obra de la Colección</string>
    <string name="introduce_el_id_del_art_culo_a_eliminar">Introduce el ID del artículo a eliminar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nombre_del_negocio">Nombre del Negocio</string>
    <string name="introduce_el_nuevo_nombre">Introduce el nuevo nombre</string>
    <string name="guardar_nombre">Guardar Nombre</string>
    <string name="precio2">Precio:</string>
    <string name="unidades2">Unidades:</string>
    <string name="la_colecci_n_de_arte_est_vac_a_actualmente">La colección de arte está vacía actualmente</string>
    <string name="nombre_de_la_obra">Nombre de la obra</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="id_de_la_obra_a_modificar">ID de la obra a modificar</string>
    <string name="modificar_obra_de_arte">Modificar Obra de Arte</string>
    <string name="buscar">Buscar</string>
    <string name="id_0">ID: 0</string>
    <string name="stock_0">Stock: 0</string>
    <string name="precio_0_0">Precio: 0.0 €</string>
    <string name="a_adir_obra">Añadir obra</string>
    <string name="galer_a_de_charles_swann">Galería de Charles Swann</string>
    <string name="colecci_n_de_alta_sociedad">Colección de Alta Sociedad</string>

    <string name="toast_rellena_datos">Por favor, rellena todos los datos</string>
    <string name="toast_articulo_anadido">Artículo añadido con éxito</string>
    <string name="toast_articulo_modificado">Artículo modificado con éxito</string>
    <string name="toast_articulo_eliminado">Artículo eliminado con éxito</string>
    <string name="toast_error_id_no_existe">Error: el ID introducido no existe</string>
    <string name="toast_nombre_actualizado">Nombre actualizado con éxito</string>
    <string name="toast_escribe_nombre">Por favor, escribe un nombre</string>
    <string name="toast_valores_invalidos">Por favor, introduce valores numéricos válidos</string>
    <string name="toast_id_invalido">Por favor, introduce un ID válido</string>
    <string name="toast_error_guardar">Error al guardar: %1$s</string>
</resources>