<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar" android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"> <ImageView
    android:id="@+id/imageView"
    android:layout_width="64dp"
    android:layout_height="64dp"
    android:contentDescription="@string/nav_header_desc"
    app:srcCompat="@drawable/swan" /> <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:text="@string/galer_a_de_charles_swann"
    android:textSize="18sp"
    android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colecci_n_de_alta_sociedad"
        android:textSize="14sp"
        android:textColor="#D4AF37" /> </LinearLayout>