<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/background_ivory">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retirar_obra_de_la_colecci_n"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textColor="@color/text_charcoal"
        android:textStyle="bold"
        android:layout_marginBottom="24dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="@string/introduce_el_id_del_art_culo_a_eliminar"
        app:boxStrokeColor="@color/color_error"
        app:hintTextColor="@color/color_error"
        app:errorIconTint="@color/color_error">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDeleteId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/text_charcoal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        android:padding="12dp"
        app:backgroundTint="@color/color_error"
        android:textColor="@color/white"/>

</LinearLayout>